<resources>
    <string name="app_name">WiFiAnalyzer</string>
    <string name="scan_wifi">Scan</string>
    <string name="scanning_wifi">Scanning&#8230;</string>
    <string name="failed_to_scan_wifi">Failed to scan Wi-Fi</string>
    <string name="no_scan_result">No scan result</string>
    <string name="no_configured_wifi">No configured Wi-Fi</string>
    <string name="signal_strength">%1$s dBm</string>
    <string name="wifi_channel">Ch: %1$s</string>
    <string name="wifi_signal_level_percent">%1$d%%</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="list_view">ListView</string>
    <string name="wifi_wps_available">"WPS available"</string>
    <string name="plz_grant_location_permission">Please grant Location permission.</string>
    <string name="content_description_wifi_signal_strength">Wi-Fi signal strength</string>

    <!-- Do not translate.  Concise terminology for wifi with WEP security -->
    <string name="wifi_security_short_wep">WEP</string>
    <!-- Do not translate.  Concise terminology for wifi with WPA security -->
    <string name="wifi_security_short_wpa">WPA</string>
    <!-- Do not translate.  Concise terminology for wifi with WPA2 security -->
    <string name="wifi_security_short_wpa2">WPA2</string>
    <!-- Do not translate.  Concise terminology for wifi with both WPA/WPA2 security -->
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <!-- Do not translate.  Concise terminology for wifi with unknown PSK type -->
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <!-- Do not translate.  Concise terminology for wifi with 802.1x EAP security -->
    <string name="wifi_security_short_eap">802.1x</string>

    <!-- Used in Wi-Fi settings dialogs when Wi-Fi does not have any security. -->
    <string name="wifi_security_none">None</string>

    <!-- Do not translate.  Terminology for wifi with WEP security -->
    <string name="wifi_security_wep">WEP</string>
    <!-- Do not translate.  Terminology for wifi with WPA security -->
    <string name="wifi_security_wpa">WPA PSK</string>
    <!-- Do not translate.  Terminology for wifi with WPA2 security -->
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <!-- Do not translate.  Terminology for wifi with both WPA/WPA2 security, or unknown -->
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <!-- Do not translate.  Terminology for wifi with unknown PSK type -->
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <!-- Do not translate.  Concise terminology for wifi with 802.1x EAP security -->
    <string name="wifi_security_eap">802.1x EAP</string>

    <string name="msg_no_such_app_installed_in_the_device">"No such application installed in the device to handle the action."</string>
    <string name="msg_exit_app_confirm">"Are you sure you want to exit app?"</string>
    <string name="msg_press_back_key_again_to_exit">"Press \'Back\' button again to exit."</string>
</resources>
